<resources>
    <string name="app_name">UniversalMarket</string>
    <string name="action_settings">Выйти</string>
    <string name="action_filters">Фильтры</string>
    <string name="title_activity_items_list">ItemsList</string>
    <string name="title_activity_product_info">ProductInfo</string>
    <string name="title_activity_add_product">AddProduct</string>
    <string name="activity_name_trans">activity_name_trans</string>
    <string name="activity_price_trans">activity_price_trans</string>
    <string name="activity_image_trans">activity_image_trans</string>
    <string name="activity_layout_trans">activity_layout_trans</string>
    <string name="activity_toolbar_trans">activity_toolbar_trans</string>
    <string name="title_activity_authorization">Authorization</string>
    <string name="login">Вход</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_test">test</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in_short">Вход</string>
    <string name="button_login">Войти</string>
    <string name="button_singup">Зарегистрироваться</string>
    <string name="activity_add_product_brand">Бренд</string>
    <string name="activity_add_product_price">Цена</string>
    <string name="activity_add_product_price_min">Цена(мин.)</string>
    <string name="activity_add_product_price_max">Цена(макс.)</string>
    <string name="activity_add_product_description">Описание</string>
    <string name="activity_add_product_phone">Телефон</string>
    <string name="activity_add_product_add">Добавить</string>
    <string name="filter_shop">Магазин: </string>
    <string name="filter_type">Тип: </string>

    <string name="nav_header">Войти или \nзарегистирироваться</string>
    <string name="button_accept">ПРИМЕНИТЬ</string>
    <string name="button_reset_all">СБРОСИТЬ ВСЕ</string>
</resources>
